--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 	<meta name="description" content="Jing Zhang's Homepage" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<meta name="keywords" content="Jing Zhang, data mining, natural language processing, large language models, graph neural networks, knowledge graphs" />
+	<meta name="keywords" content="Jing Zhang, data mining, natural language processing, large models, graph neural networks, knowledge graphs" />
 	<link href="/favicon.ico?v=2" rel="shortcut icon" />
 
 <style>
@@ -263,11 +263,29 @@ More information about my experience and research can be found on <a href="https
 
 
 <ol>
+	<div class="pub all preprint LLM LLM-alignment LLMInferenceSpeedup">
+	<li> 
+			<a href="" target="https://arxiv.org/html/2511.00819v1">Optimizing Native Sparse Attention with Latent Attention and Local Global Alternating Strategies.</a>  
+			<br /> Yuxuan Hu, Jianchao Tan, Jiaqi Zhang, Wen Zan, Pingwei Sun, Yifan Lu, Yerui Sun, Yuchen Xie, Xunliang Cai, <b>Jing Zhang</b>
+			<br /> <b>arXiv:2511.00819</b>. 
+	</li></div>
+	<div class="pub all preprint LLM LLM-alignment VLM">
+	<li> 
+			<a href="" target="https://arxiv.org/abs/2510.11020">GeoVLMath: Enhancing Geometry Reasoning in Vision-Language Models via Cross-Modal Reward for Auxiliary Line Creation.</a>  
+			<br /> Shasha Guo, Liang Pang, Xi Wang, Yanling Wang, Huawei Shen, <b>Jing Zhang</b>
+			<br /> <b>arXiv:2510.11020</b>. 
+	</li></div>
 	<div class="pub all preprint LLM LLM-alignment LLM4DB">
 	<li> 
-			<a href="" target="_blank">A Multi-Agent Collaborative Framework for Database Konb Tuning.</a>  
+			<a href="" target="https://github.com/intlyy/AgentTune/blob/main/Knob_Tuning_Agent_camera_ready%20(5).pdf">A Multi-Agent Collaborative Framework for Database Konb Tuning.</a>  
 			<br /> Yiyan Li, Haoyang Li, <b>Jing Zhang</b>, Renata Borovica-Gajic, Shuai Wang, Tieying Zhang, Jianjun Chen, Rui Shi, Cuiping Li, Hong Chen
 			<br /> <b>SIGMOD'26</b>. 
+	</li></div>
+	<div class="pub all preprint LLM LLMCompression">
+	<li> 
+			<a href="https://www.sciopen.com/article/10.26599/TST.2025.9010174" target="_blank">Efficient Low-Rank Adaptation for Sparse Large Language Model.</a>  
+			<br /> Yuxuan Hu, Tian Tian, Xiaodong Chen, Zhe Zhao, Tao Tao, Weifang Zhang, Yuanfeng Li, Yuhang Liang, Cuiping Li, Hong Chen, <b>Jing Zhang</b>
+			<br /> <b> Tsinghua Science and Technology'25</b>. 
 	</li></div>
 	<div class="pub all preprint LLM LLMhallucination">
 	<li> 
@@ -311,12 +329,6 @@ More information about my experience and research can be found on <a href="https
 			<br /> Yanling Wang, Yihan Zhao, Xiaodong Chen, Shasha Guo, Lixin Liu, Haoyang Li, Yong Xiao, <b>Jing  Zhang<sup>*</sup></b>, Qi Li, Ke Xu
 			<br /> <b>arXiv:2503.06492</b>. 
 			<br><a class="button" href="https://huggingface.co/datasets/WYLing/VisualSimpleQA" target="_blank">benchmark</a> 
-	</li></div>
-	<div class="pub all preprint LLM LLMCompression">
-	<li> 
-			<a href="https://arxiv.org/abs/2501.08582" target="_blank">LoRS: Efficient Low-Rank Adaptation for Sparse Large Language Model.</a>  
-			<br /> Yuxuan Hu, <b>Jing  Zhang<sup>*</sup></b>, Xiaodong Chen, Zhe Zhao, Cuiping Li, Hong Chen
-			<br /> <b>arXiv:2501.08582</b>. 
 	</li></div>
 	<div class="pub all preprint LLM LLMInferenceSpeedup">
 	<li> 
@@ -809,8 +821,19 @@ I'm very lucky to have the opportunities to work with these brilliant students (
 <p>
 <b>Graduate Students</b>
 <ol>
+	<li>Zhuoran Wang, Ph.D. student, Fall 2025 -</li>
+	<li>Ke Wang, Ph.D. student, Fall 2025 -</li>
+	<li>Tenglong Xin, Ph.D. student (part-time), Fall 2025 -</li>
+	<li>Chen Zhao, M.S. student, Fall 2025 -</li>
+	<li>Xiaodong Chen, M.S. student, Fall 2024 -</li>
+	<li>Sijia Luo, M.S. student, Fall 2025 -</li>
+	<li>Jinbo Su, M.S. student, Fall 2025 -</li>
+	<li>Yihan Zhao, M.S. student, Fall 2025 -</li>
+	<li>Yujie Dong, M.S. student (Soochow), Fall 2025 -</li>
 	<li>Zhiming Yao, Ph.D. student, Fall 2024 -</li>
 	<li>Yang Li, Ph.D. student, Fall 2024 -</li>
+	<li>Dong Bo, Ph.D. student (part-time), Fall 2025 -</li>
+	<li>Ruyu Zhao, M.S. student (Soochow), Fall 2024 -</li>
 	<li>Bohan Zhang, M.S. student, Fall 2024 -</li>
 	<li>Xiaodong Chen, M.S. student, Fall 2024 -</li>
 	<li>Guanlin Li, M.S. student, Fall 2024 -</li>
