--- a/index.html
+++ b/index.html
@@ -843,17 +843,17 @@ I'm very lucky to have the opportunities to work with these brilliant students (
 	<li>Zeyao Ma, M.S. student, Fall 2023 -</li>
 	<li>Xinmei Huang, M.S. student, Fall 2023 -</li>
 	<li>Yuxuan Hu, Ph.D. student, Fall 2022 -</li>
-	<li>Xiaokang Zhang, M.S. student, Fall 2022 -</li>
-	<li>Zhonghui Shao, M.S. student, Fall 2022 -</li>
 	<li>Haoyang Li, Ph.D. student, Fall 2021 - (Co-supervised with Prof. Cuiping Li)</li>
-	<li>Shasha Guo, Ph.D. student, Fall 2020 - (Co-supervised with Prof. Cuiping Li)</li>
 </ol>
 
 <b>Alumni</b>
 <ol>
-	<li>Yiqi Xu, M.S. 2022-2024. Thesis Title:Factuality detection method combining inside and outside information of Large Language Models, First Employment: Agricultural Bank of China</li>
-	<li>Xirui Ke, M.S. 2021-2024. Thesis Title:Knowledge Base Question Answering Based on Pre-trained Language Models, First Employment: JingDong</li>
-	<li>Lingxi Zhang, M.S. 2021-2024. Thesis Title:Generalization of knowledge base question answering, First Employment: Pursuing a Ph.D. in Computer Science at Rice University</li>
+	<li>Shasha Guo, 2022-2025. Dissertation Title: Research on Question Generation over Knowledge Graph, First Employment: Institute of Computing Technology, Chinese Academy of Sciences</li>
+	<li>Xiaokang Zhang, 2023-2025. Thesis Title: TableLLM: An Intelligent Office Tabular Data Processing System Integrating Reasoning and Tool Utilization, First Employment: DeepSeek</li>
+	<li>Zhonghui Shao, 2023-2025. Thesis Title: Authorship Style Transfer with Inverse Transfer: Data Augmentation: Methods and Evaluation</li>
+	<li>Yiqi Xu, M.S. 2022-2024. Thesis Title: Factuality detection method combining inside and outside information of Large Language Models, First Employment: Agricultural Bank of China</li>
+	<li>Xirui Ke, M.S. 2021-2024. Thesis Title: Knowledge Base Question Answering Based on Pre-trained Language Models, First Employment: JingDong</li>
+	<li>Lingxi Zhang, M.S. 2021-2024. Thesis Title: Generalization of knowledge base question answering, First Employment: Pursuing a Ph.D. in Computer Science at Rice University</li>
 	<li>Yanling Wang, Ph.D., 2018-2023. Dissertation Title: Research on Graph Contrastive Learning for Complex Scenes (Co-supervised with Prof. Cuiping Li), First Employment: Zhongguancun Laboratory</li>
 	<li>Jingwen Xu, M.S., 2020-2023. Thesis Title: Few-shot Knowledge Graph Completion Based on Path
 Interaction Supervised Learning and Large Language Model Prompt Learning, First Employment:  China Construction Bank</li>
@@ -907,7 +907,8 @@ Interaction Supervised Learning and Large Language Model Prompt Learning, First 
 <b>Conference PC members:</b> 
 <br />
 </p><ol>
-	<li>2025: KDD, WWW (SPC), ARR(AC), ICLR
+	<li>2026: AAAI, ICLR, NeurIPS, CVPR
+	<li>2025: KDD, WWW (SPC), ARR(AC), ICLR, NeurIPS, CVPR
 	<li>2024: KDD, WWW, AAAI, ARR, NeurIPS
 	<li>2023: KDD, WWW (SPC), AAAI, ECML/PKDD (SPC) 
 	<li>2022: KDD, WWW, IJCAI, AAAI, WSDM
