--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@ More information about my experience and research can be found on <a href="https
 <ol>
 	<div class="pub all preprint LLM LLM-alignment LLMInferenceSpeedup">
 	<li> 
-			<a href="" target="https://arxiv.org/html/2511.00819v1">Optimizing Native Sparse Attention with Latent Attention and Local Global Alternating Strategies.</a>  
+			<a href="" target="https://arxiv.org/abs/2511.00819">Optimizing Native Sparse Attention with Latent Attention and Local Global Alternating Strategies.</a>  
 			<br /> Yuxuan Hu, Jianchao Tan, Jiaqi Zhang, Wen Zan, Pingwei Sun, Yifan Lu, Yerui Sun, Yuchen Xie, Xunliang Cai, <b>Jing Zhang</b>
 			<br /> <b>arXiv:2511.00819</b>. 
 	</li></div>
