--- a/index.html
+++ b/index.html
@@ -265,19 +265,19 @@ More information about my experience and research can be found on <a href="https
 <ol>
 	<div class="pub all preprint LLM LLM-alignment LLMInferenceSpeedup">
 	<li> 
-			<a href="" target="https://arxiv.org/abs/2511.00819">Optimizing Native Sparse Attention with Latent Attention and Local Global Alternating Strategies.</a>  
+			<a href="https://arxiv.org/abs/2511.00819" target="_blank">Optimizing Native Sparse Attention with Latent Attention and Local Global Alternating Strategies.</a>  
 			<br /> Yuxuan Hu, Jianchao Tan, Jiaqi Zhang, Wen Zan, Pingwei Sun, Yifan Lu, Yerui Sun, Yuchen Xie, Xunliang Cai, <b>Jing Zhang</b>
 			<br /> <b>arXiv:2511.00819</b>. 
 	</li></div>
 	<div class="pub all preprint LLM LLM-alignment VLM">
 	<li> 
-			<a href="" target="https://arxiv.org/abs/2510.11020">GeoVLMath: Enhancing Geometry Reasoning in Vision-Language Models via Cross-Modal Reward for Auxiliary Line Creation.</a>  
+			<a href="https://arxiv.org/abs/2510.11020" target="_blank">GeoVLMath: Enhancing Geometry Reasoning in Vision-Language Models via Cross-Modal Reward for Auxiliary Line Creation.</a>  
 			<br /> Shasha Guo, Liang Pang, Xi Wang, Yanling Wang, Huawei Shen, <b>Jing Zhang</b>
 			<br /> <b>arXiv:2510.11020</b>. 
 	</li></div>
 	<div class="pub all preprint LLM LLM-alignment LLM4DB">
 	<li> 
-			<a href="" target="https://github.com/intlyy/AgentTune/blob/main/Knob_Tuning_Agent_camera_ready%20(5).pdf">A Multi-Agent Collaborative Framework for Database Konb Tuning.</a>  
+			<a href="https://github.com/intlyy/AgentTune/blob/main/Knob_Tuning_Agent_camera_ready%20(5).pdf" target="_blank">A Multi-Agent Collaborative Framework for Database Konb Tuning.</a>  
 			<br /> Yiyan Li, Haoyang Li, <b>Jing Zhang</b>, Renata Borovica-Gajic, Shuai Wang, Tieying Zhang, Jianjun Chen, Rui Shi, Cuiping Li, Hong Chen
 			<br /> <b>SIGMOD'26</b>. 
 	</li></div>
