--- a/index.html
+++ b/index.html
@@ -266,13 +266,13 @@ More information about my experience and research can be found on <a href="https
 	<div class="pub all preprint LLM LLM-alignment LLMInferenceSpeedup">
 	<li> 
 			<a href="https://arxiv.org/abs/2511.00819" target="_blank">Optimizing Native Sparse Attention with Latent Attention and Local Global Alternating Strategies.</a>  
-			<br /> Yuxuan Hu, Jianchao Tan, Jiaqi Zhang, Wen Zan, Pingwei Sun, Yifan Lu, Yerui Sun, Yuchen Xie, Xunliang Cai, <b>Jing Zhang</b>
+			<br /> Yuxuan Hu, Jianchao Tan, Jiaqi Zhang, Wen Zan, Pingwei Sun, Yifan Lu, Yerui Sun, Yuchen Xie, Xunliang Cai, <b>Jing Zhang<sup>*</sup></b>
 			<br /> <b>arXiv:2511.00819</b>. 
 	</li></div>
 	<div class="pub all preprint LLM LLM-alignment VLM">
 	<li> 
 			<a href="https://arxiv.org/abs/2510.11020" target="_blank">GeoVLMath: Enhancing Geometry Reasoning in Vision-Language Models via Cross-Modal Reward for Auxiliary Line Creation.</a>  
-			<br /> Shasha Guo, Liang Pang, Xi Wang, Yanling Wang, Huawei Shen, <b>Jing Zhang</b>
+			<br /> Shasha Guo, Liang Pang, Xi Wang, Yanling Wang, Huawei Shen, <b>Jing Zhang<sup>*</sup></b>
 			<br /> <b>arXiv:2510.11020</b>. 
 	</li></div>
 	<div class="pub all preprint LLM LLM-alignment LLM4DB">
@@ -284,7 +284,7 @@ More information about my experience and research can be found on <a href="https
 	<div class="pub all preprint LLM LLMCompression">
 	<li> 
 			<a href="https://www.sciopen.com/article/10.26599/TST.2025.9010174" target="_blank">Efficient Low-Rank Adaptation for Sparse Large Language Model.</a>  
-			<br /> Yuxuan Hu, Tian Tian, Xiaodong Chen, Zhe Zhao, Tao Tao, Weifang Zhang, Yuanfeng Li, Yuhang Liang, Cuiping Li, Hong Chen, <b>Jing Zhang</b>
+			<br /> Yuxuan Hu, Tian Tian, Xiaodong Chen, Zhe Zhao, Tao Tao, Weifang Zhang, Yuanfeng Li, Yuhang Liang, Cuiping Li, Hong Chen, <b>Jing Zhang<sup>*</sup></b>
 			<br /> <b> Tsinghua Science and Technology'25</b>. 
 	</li></div>
 	<div class="pub all preprint LLM LLMhallucination">
